# pinocchio_ros_example

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
src/: example.cpp
