<?xml version="1.0"?>
<package format="3">
  <name>pinocchio_ros_example</name>
  <version>0.0.0</version>
  <description>Example on how to use Pinocchio in a catkin package.</description>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
</package>
